[tool.poetry]
name = "cb-utils"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevičius <donatas@rasiukevicius.dev>"]
readme = "readme.md"
packages = [{include = "cb_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.19.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
bpython = "^0.24"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cb-utils = "cb_utils.cli:main"